--- a/product.html
+++ b/product.html
@@ -99,60 +99,60 @@
                      <div class="row">
                         <div class="col-md-4 margin_bottom1">
                            <div class="product_box">
-                              <figure><img src="images/product1.png" alt="#"/></figure>
-                              <h3>Computer</h3>
+                              <figure><img src="pics/power-saving-heaters.jpg" alt="#"/></figure>
+                              <h3>Power Saving Heater</h3>
                            </div>
                         </div>
                         <div class="col-md-4 margin_bottom1">
                            <div class="product_box">
-                              <figure><img src="images/product2.png" alt="#"/></figure>
-                              <h3>Laptop</h3>
+                              <figure><img src="pics/ceramic-band-heater.jpg" alt="#"/></figure>
+                              <h3>Ceramic Band Heater</h3>
                            </div>
                         </div>
                         <div class="col-md-4 margin_bottom1">
                            <div class="product_box">
-                              <figure><img src="images/product3.png" alt="#"/></figure>
-                              <h3>Tablet</h3>
+                              <figure><img src="pics/coil-nozzle-heater.jpg" alt="#"/></figure>
+                              <h3>Coil Nozzle Heater</h3>
                            </div>
                         </div>
                         <div class="col-md-4 margin_bottom1">
                            <div class="product_box">
-                              <figure><img src="images/product4.png" alt="#"/></figure>
-                              <h3>Speakers</h3>
+                              <figure><img src="pics/finned-tubular-heaters.jpg" alt="#"/></figure>
+                              <h3>Finned Tubular Heaters</h3>
                            </div>
                         </div>
                         <div class="col-md-4 margin_bottom1">
                            <div class="product_box">
-                              <figure><img src="images/product5.png" alt="#"/></figure>
-                              <h3>internet</h3>
+                              <figure><img src="pics/cartridge-heater-high-density-.jpg" alt="#"/></figure>
+                              <h3>Cartridge Heater High Density</h3>
                            </div>
                         </div>
                         <div class="col-md-4 margin_bottom1">
                            <div class="product_box">
-                              <figure><img src="images/product6.png" alt="#"/></figure>
-                              <h3>Hardisk</h3>
+                              <figure><img src="pics/low-density-cartridge-heaters.jpg" alt="#"/></figure>
+                              <h3>Low Density Cartridge Heater</h3>
                            </div>
                         </div>
                         <div class="col-md-4">
                            <div class="product_box">
-                              <figure><img src="images/product7.png" alt="#"/></figure>
-                              <h3>Rams</h3>
+                              <figure><img src="pics/mica-band-heater.jpg" alt="#"/></figure>
+                              <h3>Mica Band Heater</h3>
                            </div>
                         </div>
                         <div class="col-md-4">
                            <div class="product_box">
-                              <figure><img src="images/product8.png" alt="#"/></figure>
-                              <h3>Bettery</h3>
+                              <figure><img src="pics/micro-tubular-coil-heater.jpg" alt="#"/></figure>
+                              <h3>Micro Tubular Coil Heater</h3>
                            </div>
                         </div>
                         <div class="col-md-4">
                            <div class="product_box">
-                              <figure><img src="images/product9.png" alt="#"/></figure>
-                              <h3>Drive</h3>
+                              <figure><img src="pics/sealed-mica-nozzle-heater.jpg" alt="#"/></figure>
+                              <h3>Sealed Mica Nozzle Heater</h3>
                            </div>
                         </div>
                         <div class="col-md-12">
-                           <a class="read_more" href="#">See More</a>
+                           <a class="read_more" href="product.html">See More</a>
                         </div>
                      </div>
                   </div>
