--- a/about.html
+++ b/about.html
@@ -92,13 +92,18 @@
                <div class="col-md-5">
                   <div class="titlepage">
                      <h2>About Us</h2>
-                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                     <p> Established in 1985, SMAJ INDUSTRIES manufactures and supplies a wide range of heaters and sensors. 
+                        Using premium raw materials and thorough R and D, the products meet high industry standards and come in various specifications to satisfy diverse client demands. Known for their longevity, corrosion resistance, performance, and excellent conductivity, these products have driven significant growth. 
+                        This success is attributed to a dedicated team of engineers, technocrats, managers, and skilled laborers who innovate and meet evolving client needs. Based in Vasai, Maharashtra, their modern infrastructure supports efficient production and timely delivery. 
+                        The company's client-centric approach, ethical policies, and flexible solutions have helped them serve clients across the Indian Subcontinent effectively.
+
+</p>
                      <a class="read_more" href="#">Read More</a>
                   </div>
                </div>
                <div class="col-md-7">
                   <div class="about_img">
-                     <figure><img src="images/about.jpg" alt="#"/></figure>
+                     <figure><img src="images/aboutimage.png" alt="#"/></figure>
                   </div>
                </div>
             </div>
