--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
          <!-- header inner -->
          <div class="header">
             <div class="container-fluid">
-               <div class="row" style="background-color: rgb(65, 65, 65);">
+               <div class="row" style="background-color: rgb(30, 36, 38);">
                   <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col logo_section">
                      <div class="full">
                         <div class="center-desk">
                            <div class="logo">
-                              <a href="index.html"><img src="images/blue_logo_1.png" alt="#" /></a>
+                              <a href="index.html"><img src="pics/output-onlinepngtools.png" alt="#" /></a>
                            </div>
                         </div>
                      </div>
@@ -189,10 +189,9 @@
             <div class="container">
                <div class="row">
                   <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
-                     <img class="logo1" src="images/blue_logo_1.png" alt="#"/>
+                     <img class="logo1" src="pics/output-onlinepngtools.png" alt="#"/>
                      <ul class="social_icon">
                         <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                        <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
                         <li><a href="#"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
                         <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
                      </ul>
