--- a/product.html
+++ b/product.html
@@ -166,8 +166,8 @@
                   <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
                      <img class="logo1" src="pics/output-onlinepngtools.png" alt="#"/>
                      <ul class="social_icon">
-                        <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                        <li><a href="#"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+                        <li><a href="https://www.facebook.com/profile.php?id=61561711485935"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                        <li><a href="http://www.linkedin.com/in/smaj-industries"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
                         <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
                      </ul>
                   </div>
