--- a/contact.html
+++ b/contact.html
@@ -106,7 +106,7 @@
                            <input class="contactus" placeholder="Phone Number" name="Phone Number" required>                          
                         </div>
                         <div class="col-md-12">
-                           <textarea class="textarea" placeholder="Message" name="message"></textarea>
+                           <textarea class="textarea" placeholder="Product name and your message" name="message"></textarea>
                         </div>
                         <div class="col-md-12">
                            <button class="send_btn">Send</button>
@@ -128,7 +128,7 @@
                      <ul class="social_icon">
                         <li><a href="https://www.facebook.com/profile.php?id=61561711485935"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                         <li><a href="http://www.linkedin.com/in/smaj-industries"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
-                        <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                        <li><a href="https://www.instagram.com/smajheaters"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
                      </ul>
                   </div>
                   <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
