--- a/index.html
+++ b/index.html
@@ -124,7 +124,9 @@
                      <div class="col-md-4 margin_bottom1">
                         <div class="product_box">
                            <figure><img src="pics/power-saving-heaters.jpg" alt="" /></figure>
-                           <h3>Power Saving Heater</h3>
+                           <a href = "power_saving_heater.html"> 
+                              <h3>Power Saving Heater</h3>
+                           </a>
                         </div>
                      </div>
                      <div class="col-md-4 margin_bottom1">
