--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                      <div class="col-md-4 margin_bottom1">
                         <div class="product_box">
                            <figure><img src="pics/power-saving-heaters.jpg" alt="" /></figure>
-                           <a href = "power_saving_heater.html"> 
+                           <a href="power_saving_heater.html">
                               <h3>Power Saving Heater</h3>
                            </a>
                         </div>
@@ -176,7 +176,9 @@
                      <div class="col-md-4">
                         <div class="product_box">
                            <figure><img src="pics/sealed-mica-nozzle-heater.jpg" alt="#" /></figure>
-                           <h3>Sealed Mica Nozzle Heater</h3>
+                           <a href="sealed_mica_nozzel.html">
+                              <h3>Sealed Mica Nozzle Heater</h3>
+                           </a>
                         </div>
                      </div>
                      <div class="col-md-12">
