--- a/low_density_cartridge_heater.html
+++ b/low_density_cartridge_heater.html
@@ -35,6 +35,7 @@
   <!-- Additional CSS Files -->
   <link rel="stylesheet" href="css/fontawesome.css">
   <link rel="stylesheet" href="css/tooplate-main.css">
+  <link rel="stylesheet" href="css/owl.css">
   <link rel="stylesheet" href="css/flex-slider.css">
 
 </head>
@@ -90,7 +91,7 @@
         <div class="col-md-12">
           <div class="section-heading">
             <div class="line-dec"></div>
-            
+            <h1>Single Product</h1>
           </div>
         </div>
         <div class="col-md-6">
@@ -134,7 +135,7 @@
         <div class="col-md-6">
           <div class="right-content">
             <h4>Low Density Cartridge Heater</h4>
-            <h6>$55.00 - $77.00</h6>
+            <h6>$55.00 -</h6>
             <p>Proin commodo, diam a ultricies sagittis, erat odio rhoncus metus, eu feugiat lorem lacus aliquet arcu.
               Curabitur in gravida nisi, non placerat nibh. Praesent sit amet diam ultrices, commodo turpis id,
               dignissim leo. Suspendisse mauris massa, porttitor non fermentum vel, ullamcorper scelerisque velit. </p>
