--- a/index.html
+++ b/index.html
@@ -164,19 +164,23 @@
                      <div class="col-md-4">
                         <div class="product_box">
                            <figure><img src="pics/mica-band-heater.jpg" alt="#" /></figure>
-                           <h3>Mica Band Heater</h3>
+                           <a href="mica_band_heater.html">
+                              <h3>Mica Band Heater</h3>
+                           </a>
                         </div>
                      </div>
                      <div class="col-md-4">
                         <div class="product_box">
                            <figure><img src="pics/micro-tubular-coil-heater.jpg" alt="#" /></figure>
-                           <h3>Micro Tubular Coil Heater</h3>
+                           <a href="micro_tubular_coil_heater.html">
+                              <h3>Micro Tubular Coil Heater</h3>
+                           </a>
                         </div>
                      </div>
                      <div class="col-md-4">
                         <div class="product_box">
                            <figure><img src="pics/sealed-mica-nozzle-heater.jpg" alt="#" /></figure>
-                           <a href="sealed_mica_nozzel.html">
+                           <a href="sealed_mica_nozzle.html">
                               <h3>Sealed Mica Nozzle Heater</h3>
                            </a>
                         </div>
