--- a/mica_band_heater.html
+++ b/mica_band_heater.html
@@ -63,13 +63,13 @@
                             </button>
                             <div class="collapse navbar-collapse" id="navbarsExample04">
                                 <ul class="navbar-nav mr-auto">
-                                    <li class="nav-item active">
+                                    <li class="nav-item">
                                         <a class="nav-link" href="index.html">Home</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="about.html">About</a>
                                     </li>
-                                    <li class="nav-item">
+                                    <li class="nav-item active">
                                         <a class="nav-link" href="product.html">Products</a>
                                     </li>
                                     <li class="nav-item">
@@ -85,7 +85,7 @@
     </header>
 
     <!-- Page Content -->
-    <div class="single-product">
+    <div class="single-product" style="padding-bottom: 80px;">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -99,16 +99,16 @@
                         <div id="slider" class="flexslider">
                             <ul class="slides">
                                 <li>
-                                    <img src="images/power_saving_heater.png" />
+                                    <img src="images/micabandheater.jpg" />
                                 </li>
                                 <li>
-                                    <img src="images/power_saving_heater1.png" />
+                                    <img src="images/micabandheater1.jpeg" />
                                 </li>
                                 <li>
-                                    <img src="images/psh_specs1.png" />
+                                    <img src="images/micaspecs1.png" />
                                 </li>
                                 <li>
-                                    <img src="images/psh_specs2.png" />
+                                    <img src="images/micaspecs2.png" />
                                 </li>
                                 <!-- items mirrored twice, total of 12 -->
                             </ul>
@@ -116,16 +116,16 @@
                         <div id="carousel" class="flexslider">
                             <ul class="slides">
                                 <li>
-                                    <img src="pics/power-saving-heaters.jpg" />
+                                    <img src="pics/micabandheater.jpg" />
                                 </li>
                                 <li>
-                                    <img src="pics/power_saving_heater1.png" />
+                                    <img src="pics/micabandheater1.jpg" />
                                 </li>
                                 <li>
-                                    <img src="pics/psh_specs1.png" />
+                                    <img src="pics/micaspecs1.png" />
                                 </li>
                                 <li>
-                                    <img src="pics/psh_specs2.png" />
+                                    <img src="pics/micaspecs2.png" />
                                 </li>
                                 <!-- items mirrored twice, total of 12 -->
                             </ul>
@@ -134,22 +134,21 @@
                 </div>
                 <div class="col-md-6">
                     <div class="right-content">
-                        <h4>Power Saving Heater</h4>
+                        <h4>Mica Band Heater</h4>
                         <h6>$55.00 - $77.00</h6>
-                        <p style="text-align: justify;">SMAJ’s specially designed and engineered the power saver heater
-                            to meet the ever increasing demand for energy conservation and to improve operations
-                            efficiency, capable of generating suitable temperature for processing resign with higher
-                            processing temperature. Energy Conservation is achieved by using thick Ceramic fiber
-                            insulating blanket on surface. Power consumption is reduced upto 30 percent because of low
-                            thermal conductivity of the ceramic fiber insulation. The external surface temperatures of
-                            the power saver band heaters are approximately 800 deg C <br><br>
-                            <strong> Spiral Resistive Winding </strong> by nickel chrome 80/20 wire wide sectioned with
-                            resultant low level specific load.<br><br>
-                            <strong>Insulation</strong>in high purity ceramic with high mechanical resistance, to the
-                            thermal shocks and high dielectric strength. <br><br>
-                            <strong>Insulation Thickness </strong>1 inch, 2 inch, 3 inch and 4 inch
-                            <strong>Steel Terminal Box</strong> for high temperature working.
-                            <strong>Casing</strong> by Stainless Steel / Aluminized Steel cover
+                        <p style="text-align: justify;"> Mica Band Heater can perform at an operating temperature [in
+                            application up to 350°C] essential to process high temperature resins in plastic processing
+                            machines. Mica Band assure maintaining the lowest winding temperature possible, keeping
+                            low-mass heating element assembly for fast heat-up and quick thermal response to controls.
+                            It corporate the low thermal expansion built these heaters is designed with brass and
+                            stainless steel sheaths in mica band to accommodate high wattage requirements.<br>
+                            <strong>winding nickel</strong> chrome 80/20 with consequent low specific load obtained by
+                            winding machine assuring constant repeatability and uniformity.
+                            <strong> Insulation </strong>pure mica with very low inorganic alloy content.<br>
+                            <strong> Internal casing </strong>stainless steel with high thermal conductivity for
+                            guaranteed maximum heat transmission to the plasticization cylinders.<br>
+                            <strong> Terminal box </strong>incorporates the junction between power cables and resistive plate. A metallic protection shields.<br>
+                            <strong> Power cable </strong>for high temperature with leads in pure nickel or nickel copper. External fiberglass insulated. External protection in metallic braiding with various options.<br>
                         </p>
                         <span>In stock</span>
                         <!-- <form action="" method="get">
