--- a/power_saving_heater.html
+++ b/power_saving_heater.html
@@ -84,7 +84,7 @@
   </header>
 
   <!-- Page Content -->
-  <div class="single-product">
+  <div class="single-product" style="padding-bottom: 80px;">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
