--- a/ceramic_band_heater.html
+++ b/ceramic_band_heater.html
@@ -98,13 +98,16 @@
             <div id="slider" class="flexslider">
               <ul class="slides">
                 <li>
-                  <img src="images/ldc1.jpg" />
+                  <img src="images/ceramic-band-heater.jpg" />
                 </li>
                 <li>
-                  <img src="images/ldc2.jpg" />
+                  <img src="images/ceramic-band-heater1.jpeg" />
                 </li>
                 <li>
-                  <img src="images/ldcspecs1.png" />
+                  <img src="images/ceramic-band-heaterspecs1.png" />
+                </li>
+                <li>
+                  <img src="images/ceramic-band-heaterspecs2.png" />
                 </li>
                 <!-- items mirrored twice, total of 12 -->
               </ul>
@@ -112,15 +115,17 @@
             <div id="carousel" class="flexslider">
               <ul class="slides">
                 <li>
-                  <img src="pics/ldc1.jpg" />
+                  <img src="pics/ceramic-band-heater.jpg" />
                 </li>
                 <li>
-                  <img src="pics/ldc2.jpg" />
+                  <img src="pics/ceramic-band-heater1.jpeg" />
                 </li>
                 <li>
-                  <img src="pics/ldcspecs1.png" />
+                  <img src="pics/ceramic-band-heaterspecs1.png" />
                 </li>
-
+                <li>
+                  <img src="pics/ceramic-band-heaterspecs2.png" />
+                </li>
                 <!-- items mirrored twice, total of 12 -->
               </ul>
             </div>
@@ -128,26 +133,18 @@
         </div>
         <div class="col-md-6">
           <div class="right-content">
-            <h4>Low Density Cartridge Heater (LDC)</h4>
+            <h4>Ceramic Band Heater Heater</h4>
             <h6>$55.00 - $77.00</h6>
             <p style = "text-align: justify;">
-              Low and Medium Density Cartridge Heater is developed for heating applications not requiring high watt densities and sheath temperatures not exceeding 300°C. These Cartridge Heating Elements are designed in maximum watt densities of 30 to 45 watts per square inch depending on applications. Such a Cartridge Heating Elements of various sheath diameters can be used in any assembly, equipment or machine.
-              The Low and Medium Density Cartridge Heater can be absolutely customized to suit customer's needs. Such Cartridge Heating Elements can be an economical option for customers not requiring high process temperatures. Cartridge Heating Elements are designed and calibrated perfectly to ensure that optimum conductivity between the resistance coil and the Cartridge Heater is achieved.
-              The Low and Medium Density Cartridge Heater design consists of a helically wound resistance coil made from nickel-chrome wire, evenly stretched and strung through holes in a round ceramic insulator. The element assembly is inserted into a Chrome Nickel Steel. This alloy provides the best combination of physical strength and resistance to heat oxidation up to 450°C
-              Specially selected grain size and high purity magnesium oxide is used to fill all remaining space inside the ceramic insulator to increase thermal conductivity, dielectric strength, and provide longer operating life of the Cartridge Heater.<br><br>
+                Ceramic Band Heaters are specifically designed and engineered to meet the ever increasing demand for energy conservation and to improve operation efficiency. 
+                Ceramic band heaters are next generation electric heaters which are at pivot place for plastic processing machines to work efficiently and effectively. With best quality of components used to reach high power levels, and offers a long series of benefits including highly durable, Rapid heat transmission. Energy efficient, uniform heating, Easy installation.<br><br>
 
-              <strong>Applications:</strong><br>
-              Plastic extruders<br>
-              Plastic molding<br>
-              Hot runner molds<br>
-              Shoe machinery<br>
-              Hot stamping<br>
-              Food processing<br>
-              Medical equipment<br>
-              Heating gases and liquid<br>
-              Packaging equipment<br>
-              Glue guns<br>
-              Molds and dies.
+                <strong>Spiral resistive winding</strong> by nickel chrome 80/20 wire wide sectioned with resultant low level specific load.<br><br>
+                <strong>Insulation</strong> in high purity ceramic with high mechanical resistance, to the thermal shocks, and high dielectric strength.<br><br>
+                <strong>Steel terminal box</strong> for high temperature working.<br><br>
+                <strong>Protection by ceramic fiber.</strong><br><br>
+                <strong>Casing</strong> by stainless steel/ aluminized Steel.<br><br>
+                <strong>Power Cable</strong> with pure nickel leads for high temperature working or nickel plated copper. Insulation by fiber glass Teflon. External metallic braiding.
             </p>
             <span>In stock</span>
             <!-- <form action="" method="get">
