--- a/finned_tubular_heater.html
+++ b/finned_tubular_heater.html
@@ -84,7 +84,7 @@
   </header>
 
   <!-- Page Content -->
-  <div class="single-product">
+  <div class="single-product" style = "padding-bottom: 80px;">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -106,25 +106,19 @@
                 <li>
                   <img src="images/finnedtubularheaterspecs.png" />
                 </li>
-                <li>
-                  <img src="images/psh_specs2.png" />
-                </li>
                 <!-- items mirrored twice, total of 12 -->
               </ul>
             </div>
             <div id="carousel" class="flexslider">
               <ul class="slides">
                 <li>
-                  <img src="pics/power-saving-heaters.jpg" />
+                  <img src="pics/finned-tubular-heaters.jpg" />
                 </li>
                 <li>
-                  <img src="pics/power_saving_heater1.png" />
+                  <img src="pics/finned-tubular-heaters1.jpg" />
                 </li>
                 <li>
-                  <img src="pics/psh_specs1.png" />
-                </li>
-                <li>
-                  <img src="pics/psh_specs2.png" />
+                  <img src="pics/finnedtubularheaterspecs.png" />
                 </li>
                 <!-- items mirrored twice, total of 12 -->
               </ul>
