--- a/high_density_cartridge_heater.html
+++ b/high_density_cartridge_heater.html
@@ -98,13 +98,13 @@
             <div id="slider" class="flexslider">
               <ul class="slides">
                 <li>
-                  <img src="images/ldc1.jpg" />
+                  <img src="images/hdc1.jpg" />
                 </li>
                 <li>
-                  <img src="images/ldc2.jpg" />
+                  <img src="images/hdc2.jpg" />
                 </li>
                 <li>
-                  <img src="images/ldcspecs1.png" />
+                  <img src="images/hdcspecs.png" />
                 </li>
                 <!-- items mirrored twice, total of 12 -->
               </ul>
@@ -112,13 +112,13 @@
             <div id="carousel" class="flexslider">
               <ul class="slides">
                 <li>
-                  <img src="pics/ldc1.jpg" />
+                  <img src="pics/hdc1.jpg" />
                 </li>
                 <li>
-                  <img src="pics/ldc2.jpg" />
+                  <img src="pics/hdc2.jpg" />
                 </li>
                 <li>
-                  <img src="pics/ldcspecs1.png" />
+                  <img src="pics/hdcspecs.png" />
                 </li>
 
                 <!-- items mirrored twice, total of 12 -->
@@ -128,13 +128,18 @@
         </div>
         <div class="col-md-6">
           <div class="right-content">
-            <h4>Low Density Cartridge Heater (LDC)</h4>
+            <h4>High Density Cartridge Heater (LDC)</h4>
             <h6>$55.00 - $77.00</h6>
             <p style = "text-align: justify;">
-              Low and Medium Density Cartridge Heater is developed for heating applications not requiring high watt densities and sheath temperatures not exceeding 300°C. These Cartridge Heating Elements are designed in maximum watt densities of 30 to 45 watts per square inch depending on applications. Such a Cartridge Heating Elements of various sheath diameters can be used in any assembly, equipment or machine.
-              The Low and Medium Density Cartridge Heater can be absolutely customized to suit customer's needs. Such Cartridge Heating Elements can be an economical option for customers not requiring high process temperatures. Cartridge Heating Elements are designed and calibrated perfectly to ensure that optimum conductivity between the resistance coil and the Cartridge Heater is achieved.
-              The Low and Medium Density Cartridge Heater design consists of a helically wound resistance coil made from nickel-chrome wire, evenly stretched and strung through holes in a round ceramic insulator. The element assembly is inserted into a Chrome Nickel Steel. This alloy provides the best combination of physical strength and resistance to heat oxidation up to 450°C
-              Specially selected grain size and high purity magnesium oxide is used to fill all remaining space inside the ceramic insulator to increase thermal conductivity, dielectric strength, and provide longer operating life of the Cartridge Heater.<br><br>
+              Cartridge heater often considered as component heater has a heating coil wounded on a ceramic core and are cylindrical-shaped, heavy-duty Joule heating element. Electricity flows through coil when two or three-phase voltage is applied. The electricity heats the coil and, subsequently, the cartridge sheath. The watt density (in Watt/inch²) depends on the number of spirals or turns per inch. The sheath comes in contact with the surface being heated. Insulation in the cartridge heater ensures that the heating wire never comes in contact with the sheath and protects the sheath from melting in case of any mishap. The leads that come out of the heater terminal have metal conduit, or silicon sleeves to protect from high temperature. Lead wires are often fiberglass or Teflon
+              SMAJ manufacture high density cartridge heaters using only high quality materials, which guarantees performance under extreme conditions. Thus, making it suitable for most industry applications for fast delivery. For special applications, it can be customized to suit individual requirements for easier installation, special power distribution, and individual connections. <br><br>
+
+              <strong>Features and Advantages:</strong><br>
+              - Higher watt densities permit smaller heaters to be used without sacrificing life expectancy. This result in up- front as well as long term cost savings.<br>
+              - Swaged construction provides maximum support for the resistance wire, eliminating the effects of vibration and shock.<br>
+              - Excellent heat transfer characteristic permit improved life expectancy over other style heaters.<br>
+              - Termination styles and special features allow customization to any application.<br>
+              - Application up to 820°C <br><br>
 
               <strong>Applications:</strong><br>
               Plastic extruders<br>
