--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                      <div class="col-md-4 margin_bottom1">
                         <div class="product_box">
                            <figure><img src="pics/ceramic-band-heater.jpg" alt="#" /></figure>
-                           <h3>Ceramic Band Heater</h3>
+                           <a href = "ceramic_band_heater.html"><h3>Ceramic Band Heater</h3></a>
                         </div>
                      </div>
                      <div class="col-md-4 margin_bottom1">
@@ -150,7 +150,7 @@
                      <div class="col-md-4 margin_bottom1">
                         <div class="product_box">
                            <figure><img src="pics/cartridge-heater-high-density-.jpg" alt="#" /></figure>
-                           <h3>Cartridge Heater High Density</h3>
+                           <a href = "high_density_cartridge_heater.html"><h3>Cartridge Heater High Density</h3></a>
                         </div>
                      </div>
                      <div class="col-md-4 margin_bottom1">
