--- a/coil_nozzle_heater.html
+++ b/coil_nozzle_heater.html
@@ -98,28 +98,24 @@
             <div id="slider" class="flexslider">
               <ul class="slides">
                 <li>
-                  <img src="images/hdc1.jpg" />
+                  <img src="images/coil-nozzle-heater1.jpg" />
                 </li>
                 <li>
-                  <img src="images/hdc2.jpg" />
+                  <img src="images/coil-nozzle-heater2.jpg" />
                 </li>
-                <li>
-                  <img src="images/hdcspecs.png" />
-                </li>
+
                 <!-- items mirrored twice, total of 12 -->
               </ul>
             </div>
             <div id="carousel" class="flexslider">
               <ul class="slides">
                 <li>
-                  <img src="pics/hdc1.jpg" />
+                  <img src="pics/coil-nozzle-heater1.jpg" />
                 </li>
                 <li>
-                  <img src="pics/hdc2.jpg" />
+                  <img src="pics/coil-nozzle-heater2.jpg" />
                 </li>
-                <li>
-                  <img src="pics/hdcspecs.png" />
-                </li>
+
 
                 <!-- items mirrored twice, total of 12 -->
               </ul>
@@ -128,31 +124,24 @@
         </div>
         <div class="col-md-6">
           <div class="right-content">
-            <h4>High Density Cartridge Heater (HDC)</h4>
+            <h4>Coil Nozzle Heater</h4>
             <h6>$55.00 - $77.00</h6>
             <p style = "text-align: justify;">
-              Cartridge heater often considered as component heater has a heating coil wounded on a ceramic core and are cylindrical-shaped, heavy-duty Joule heating element. Electricity flows through coil when two or three-phase voltage is applied. The electricity heats the coil and, subsequently, the cartridge sheath. The watt density (in Watt/inch²) depends on the number of spirals or turns per inch. The sheath comes in contact with the surface being heated. Insulation in the cartridge heater ensures that the heating wire never comes in contact with the sheath and protects the sheath from melting in case of any mishap. The leads that come out of the heater terminal have metal conduit, or silicon sleeves to protect from high temperature. Lead wires are often fiberglass or Teflon
-              SMAJ manufacture high density cartridge heaters using only high quality materials, which guarantees performance under extreme conditions. Thus, making it suitable for most industry applications for fast delivery. For special applications, it can be customized to suit individual requirements for easier installation, special power distribution, and individual connections. <br><br>
+              SMAJ’S nozzle coil  heaters are made of nickel chrome resistance wire placed inside chrome nickel steel tube filled with mgo powder and compacted for faster and efficient heat transfer. The heaters are annealed to acquire malleability for bending into any shape. 
+              Nozzle heaters with built in thermocouple are also available. <br><br>
 
-              <strong>Features and Advantages:</strong><br>
-              - Higher watt densities permit smaller heaters to be used without sacrificing life expectancy. This result in up- front as well as long term cost savings.<br>
-              - Swaged construction provides maximum support for the resistance wire, eliminating the effects of vibration and shock.<br>
-              - Excellent heat transfer characteristic permit improved life expectancy over other style heaters.<br>
-              - Termination styles and special features allow customization to any application.<br>
-              - Application up to 820°C <br><br>
+              <strong>Features:</strong><br>
+              Sheath material: Non-corrosive SS / Aluminized Steel 
+              Voltage Range: 24V - 250V
+              Temp range for up to 400°C
+              Option of J type or K type thermocouple available on request
+              Negligible effect of material spillage
+              Minimum inner diameter 25 mm <br><br>
 
               <strong>Applications:</strong><br>
-              Plastic extruders<br>
-              Plastic molding<br>
-              Hot runner molds<br>
-              Shoe machinery<br>
-              Hot stamping<br>
-              Food processing<br>
-              Medical equipment<br>
-              Heating gases and liquid<br>
-              Packaging equipment<br>
-              Glue guns<br>
-              Molds and dies.
+              Injection and blow molding<br>
+              Process engineering<br>
+              Extend nozzles
             </p>
             <span>In stock</span>
             <!-- <form action="" method="get">
