--- a/mica_band_heater.html
+++ b/mica_band_heater.html
@@ -142,7 +142,7 @@
                             low-mass heating element assembly for fast heat-up and quick thermal response to controls.
                             It corporate the low thermal expansion built these heaters is designed with brass and
                             stainless steel sheaths in mica band to accommodate high wattage requirements.<br>
-                            <strong>winding nickel</strong> chrome 80/20 with consequent low specific load obtained by
+                            <strong>Winding nickel</strong> chrome 80/20 with consequent low specific load obtained by
                             winding machine assuring constant repeatability and uniformity.
                             <strong> Insulation </strong>pure mica with very low inorganic alloy content.<br>
                             <strong> Internal casing </strong>stainless steel with high thermal conductivity for
