--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                      <div class="col-md-4 margin_bottom1">
                         <div class="product_box">
                            <figure><img src="pics/coil-nozzle-heater.jpg" alt="#" /></figure>
-                           <h3>Coil Nozzle Heater</h3>
+                           <a href = "coil_nozzle_heater.html"> <h3>Coil Nozzle Heater</h3> </a>
                         </div>
                      </div>
                      <div class="col-md-4 margin_bottom1">
