--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                      </div>
                      <div class="col-md-4 margin_bottom1">
                         <div class="product_box">
-                           <figure><img src="pics/coil-nozzle-heater.jpg" alt="#" /></figure>
+                           <figure><img src="pics/coil-nozzle-heater1.jpg" alt="#" /></figure>
                            <a href = "coil_nozzle_heater.html"> <h3>Coil Nozzle Heater</h3> </a>
                         </div>
                      </div>
