--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
          <div class="row">
             <div class="col-md-12">
                <div class="titlepage">
-                  <h2>Our Products</h2>
+                  <h2>Frequently Bought Products</h2>
                </div>
             </div>
          </div>
