--- a/product.html
+++ b/product.html
@@ -158,6 +158,46 @@
                               </a>
                            </div>
                         </div>
+                        <div class="col-md-4">
+                           <div class="product_box">
+                              <figure><img src="pics/sealed-mica-nozzle-heater.jpg" alt="#" /></figure>
+                              <a href="immersion_heater.html">
+                                 <h3>Immersion Heater</h3>
+                              </a>
+                           </div>
+                        </div>
+                        <div class="col-md-4">
+                           <div class="product_box">
+                              <figure><img src="pics/sealed-mica-nozzle-heater.jpg" alt="#" /></figure>
+                              <a href="micro_coil_heater.html">
+                                 <h3>Micro Coil Heater</h3>
+                              </a>
+                           </div>
+                        </div>
+                        <div class="col-md-4">
+                           <div class="product_box">
+                              <figure><img src="pics/sealed-mica-nozzle-heater.jpg" alt="#" /></figure>
+                              <a href="Flexible_heater.html">
+                                 <h3>Flexible Heater</h3>
+                              </a>
+                           </div>
+                        </div>
+                        <div class="col-md-4">
+                           <div class="product_box">
+                              <figure><img src="pics/sealed-mica-nozzle-heater.jpg" alt="#" /></figure>
+                              <a href="manifold_heater.html">
+                                 <h3>ManiFold Heater</h3>
+                              </a>
+                           </div>
+                        </div>
+                        <div class="col-md-4">
+                           <div class="product_box">
+                              <figure><img src="pics/sealed-mica-nozzle-heater.jpg" alt="#" /></figure>
+                              <a href="brass_pressed_heater.html">
+                                 <h3>Brass Pressed Heater</h3>
+                              </a>
+                           </div>
+                        </div>
                      </div>
                   </div>
                </div>
